<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.august.hangman.MenuActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191"
        tools:text="Hangman"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/playButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:onClick="clickedPlay"
        android:text="@string/Play"
        app:layout_constraintLeft_toLeftOf="@+id/title"
        app:layout_constraintRight_toRightOf="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="Play" />

    <Button
        android:id="@+id/aboutButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="clickedAbout"
        android:text="@string/About"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/playButton"
        app:layout_constraintRight_toRightOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/playButton"
        tools:text="About" />

</android.support.constraint.ConstraintLayout>
