<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.august.hangman.PlayActivity">

    <EditText
        android:id="@+id/guessEdit"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@android:color/black"
        android:cursorVisible="true"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorLink="@android:color/black"
        android:textCursorDrawable="@null"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/infoText"
        tools:text="Next Letter"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="32dp" />

    <Button
        android:id="@+id/guessButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="48dp"
        android:onClick="guessClicked"
        android:text="@string/Guess"
        app:layout_constraintLeft_toRightOf="@+id/guessEdit"
        app:layout_constraintTop_toBottomOf="@+id/infoText"
        tools:text="Guess" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:text="@string/Info"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/guessedWord" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="136dp"
        android:layout_height="129dp"
        app:srcCompat="@drawable/hang10"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="33dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.826" />

    <TextView
        android:id="@+id/guessedWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GuessedWord"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Guessed Word"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp" />

</android.support.constraint.ConstraintLayout>
